# WebRenderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  Install.md  Readme.md  WebRenderer.data  WebRenderer.js  WebRenderer.wasm  index.html  vcpkg.json  webRenderer.data  webRenderer.js  webRenderer.wasm
.github/workflows/: Emscripten.yaml  ci-emscripten.yml
assets/shaders/: texture.vert  triangle.frag  triangle.vert
include/: gitCommitLogs.rtf  imgui_ext.h  opengl_check.h  renderpass.h  shader.h  webrenderer.h
src/: app.cpp  renderpass.cpp  shader.cpp  webrenderer.cpp
